# NeuLight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: neureflect.yaml  neus.yaml
config/model/: BRDF.yaml  SDF.yaml  emission.yaml  neureflect.yaml  neus.yaml
neulight/: neureflect.py  neus.py
neulight/dataset/: free_viewpoint.py
neulight/model/: BRDF.py  MLP.py  SDF.py  emission.py  harmonic.py  neulight.py  neureflect.py  neus.py
neulight/utils/: files.py  ray_sampler.py  torch_numpy.py
neulight/visualization/: __init__.py  visualize_channel.py  visualize_mesh.py  visualize_point_cloud.py  visualize_points.py  visualize_rays.py
notebook/: NeuReflect.ipynb  NeuS.ipynb  dataset.ipynb
